Implement static counter and copy constructor in Employee